# thymelang_rust

./: Cargo.toml  README.md  rules.md
examples/: sample.thm  simple.thm  target-2022-11-20.thm
examples/lbasi/: main.rs
examples/variant2/: lexer.rs  main.rs
examples/variant2/tests/: lexer_tests.rs
resources/test_files/: sample.thm  target-2022-11-20.thm  test1.thm  test2.thm
src/: interpreter.rs  lexer.rs  lexer_old.rs  lib.rs  main.rs  parser.rs  type_checker.rs
tests/: input_file_tests.rs  interpreter_tests.rs  parser_tests.rs
