[package]
name = "thymelang_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
# Serde used for tests to serialize structs
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
# Clap used for handling command line args
clap = { version = "4.0", features = ["derive"] }