[package]
name = "thymelang"
version = "0.1.0"
edition = "2021"
authors = ["Timo Laitila <timo@proactor.dev>"]
description = "Thymelang interpreter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
# Clap used for handling command line args
clap = { version = "4.0", features = ["derive"] }
# Serde used for tests to serialize structs
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

[dev-dependencies]
# pretty_assertions extend standard assert_eq! and assert_ne! macros, to provide colorful diff.
pretty_assertions = "1"
